--- a/package.json
+++ b/package.json
@@ -30,23 +30,18 @@
   },
   "devDependencies": {
     "@actions/core": "^1.11.1",
-    "@types/node": "^22.13.14",
-    "@viamrobotics/eslint-config": "^1.0.2",
+    "@types/node": "^22.14.1",
+    "@viamrobotics/eslint-config": "^1.1.0",
     "@viamrobotics/prettier-config": "^1.0.1",
     "@viamrobotics/typescript-config": "^0.1.1",
     "esbuild": "^0.25.1",
-    "eslint": "^9.23.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3",
     "tempy": "^3.1.0",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "~8.23.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "~8.31.0",
     "valibot": "^1.0.0",
-    "vitest": "^3.0.9"
+    "vitest": "^3.1.2"
   },
-  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6",
-  "pnpm": {
-    "overrides": {
-      "@typescript-eslint/utils": "~8.23.0"
-    }
-  }
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
